<resources>
    <string name="app_name">Magic The Gathering</string>
    <string name="action_settings">Settings</string>
    <string name="search_card_name">Search Card Name</string>
    <string name="search_title">Search Card Database</string>
    <string name="search_text">Search</string>
    <string name="delete">Delete></string>
    <string name="add_to_deck">Add to deck</string>
    <string name="name_field">Card Name:</string>
    <string name="search_name">Name</string>
    <string name="search_type">Type</string>
    <string name="search_booster">Booster</string>
    <string name="search_colors">Search by Colours</string>
    <string name="seach_rarity">Search by Rarity</string>
    <string name="search_cards_button">Search For Cards</string>
    <string name="booster_prompt">Choose a Booster</string>
    <string name="name_hint">Name</string>
    <string name="type_hint">Type</string>
    <string name="white">white</string>
    <string name="blue">blue</string>
    <string name="black">black</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create Account</string>
    <string name="life">Game Tools</string>
    <string name="decks">Decks</string>
    <string name="players">Users</string>
    <string name="card_search">Card Search</string>
    <string name="signout">signout</string>
    <string name="card_name">Card Name</string>
    <string name="name_signup">Name</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">password</string>
    <string name="register_btn">Register</string>
    <string name="advanced_search">Advanced Search</string>

    <string-array name="type_array">
        <item>Please Select a Type</item>
        <item>enchantment</item>
        <item>sorcery</item>
        <item>instant</item>
        <item>artifact</item>
        <item>planeswalker</item>
        <item>cat</item>
        <item>vampire</item>
        <item>beast</item>
        <item>merfolk</item>
        <item>human</item>
        <item>demon</item>
        <item>wolf</item>
        <item>dinosaur</item>
        <item>elf</item>
        <item>rat</item>
    </string-array>

    <string-array name="color_array">
        <item>Please Select a Colour</item>
        <item>white</item>
        <item>blue</item>
        <item>black</item>
        <item>red</item>
        <item>green</item>
    </string-array>

</resources>
