<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.ie.mymagiccards.activity.MainActivity">
    <item
        android:id="@+id/add"
        android:orderInCategory="100"
        android:title="@string/add_to_deck"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search_card_name"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />






</menu>
