<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search For Your Cards"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@id/myname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_field"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:layout_marginTop="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/searchEdt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/myname"
        android:layout_marginTop="8dp"
        android:hint="@string/search_card_name"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    </RelativeLayout>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:entries="@array/type_array"
        android:prompt="@string/booster_prompt" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Spinner
            android:id="@+id/colorSpinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:entries="@array/color_array" />

    </LinearLayout>


    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/search_text"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/advancedSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        />


</LinearLayout>