<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.ie.mymagiccards.activity.SearchActivity">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/searchTitle"
        app:layout_constraintStart_toStartOf="@+id/searchTitle"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle" />

    <TextView
        android:id="@+id/searchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_field"
        app:layout_constraintBaseline_toBaselineOf="@+id/searchNameBox"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/searchType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/search_type"
        app:layout_constraintBaseline_toBaselineOf="@+id/typeSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/searchBooster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/search_booster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchBoosterBox" />

    <TextView
        android:id="@+id/searchColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/search_colors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBoosterBox" />

    <TextView
        android:id="@+id/SearchRarity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/seach_rarity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBoosterBox" />

    <EditText
        android:id="@+id/typeSpinner"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/type_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/searchType"
        app:layout_constraintTop_toBottomOf="@+id/searchNameBox" />

    <EditText
        android:id="@+id/searchNameBox"
        android:layout_width="210dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/searchName"
        app:layout_constraintTop_toBottomOf="@+id/searchSub" />

    <Spinner
        android:id="@+id/searchBoosterBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/type_array"
        android:prompt="@string/booster_prompt"
        app:layout_constraintStart_toEndOf="@+id/searchBooster"
        app:layout_constraintTop_toBottomOf="@+id/typeSpinner" />

    <CheckBox
        android:id="@+id/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchColors" />

    <CheckBox
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="blue"
        app:layout_constraintStart_toStartOf="@+id/green"
        app:layout_constraintTop_toBottomOf="@+id/green" />

    <CheckBox
        android:id="@+id/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="black"
        app:layout_constraintStart_toStartOf="@+id/white"
        app:layout_constraintTop_toBottomOf="@+id/white" />

    <CheckBox
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="green"
        app:layout_constraintStart_toStartOf="@+id/black"
        app:layout_constraintTop_toBottomOf="@+id/black" />

    <CheckBox
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="red"
        app:layout_constraintStart_toStartOf="@+id/blue"
        app:layout_constraintTop_toBottomOf="@+id/blue" />


    <CheckBox
        android:id="@+id/common"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="common"
        app:layout_constraintStart_toStartOf="@+id/uncommon"
        app:layout_constraintTop_toBottomOf="@+id/uncommon" />

    <CheckBox
        android:id="@+id/uncommon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="uncommon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchRarity" />

    <CheckBox
        android:id="@+id/rare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="rare"
        app:layout_constraintStart_toStartOf="@+id/common"
        app:layout_constraintTop_toBottomOf="@+id/common" />

    <CheckBox
        android:id="@+id/mytic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="mytic"
        app:layout_constraintStart_toStartOf="@+id/rare"
        app:layout_constraintTop_toBottomOf="@+id/rare" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:lineSpacingExtra="10sp"
        android:text="@string/search_cards_button"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
